--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,20 @@
         background-color: #ddd;
         color: black;
     }
+    .active a {
+        background-color: blue;
+    }
 </style>
 <div class="navbar">
-    <a routerLink="/home"> Home </a>
-    <a routerLink="/bio"> Developer Bio </a>
-    <a routerLink="/bio-create"> Create Bio </a>      
+    <a routerLink="/home" routerLinkActive="active"> Home </a>
+    <a routerLink="/bio" routerLinkActive="active"> Developer Bio </a>
+    <a routerLink="/bio-create" routerLinkActive="active"> Create Bio </a>  
+    @if (!isAuthenticated){
+        <a routerLink="/login"> Login </a>  
+    }
+    @else{
+        <a (click)= "logout()"> Logout </a>   
+    }
+       
 </div>
 <router-outlet></router-outlet>
